[package]
name = "rox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#needed?

lazy_static = "1.4.0"
# needed to use FromPrimitive u8 <--> enum
num-traits = "0.2"
num-derive = "0.3"
clap = { version = "3.1.6", features = ["cargo"] }
arrayvec = "0.7.2"
miette =  {version = "5.1.1", features = ["fancy"] }
thiserror = "1.0.30"

[[bin]]
name = "rowc"
path = "src/compiler/bin/main.rs"

[[bin]]
name = "row"
path = "src/interpreter/bin/main.rs"